# Lerobot_diffusion_SmolVLA

./: README.md  environment.yml  pyproject.toml  requirements.txt
configs/cloud/: phaseqflow_cloud_accelerate.sh
configs/cloud/legacy/: smolvla_lora_cloud_accelerate.sh
configs/local/: phaseqflow_local.sh  smolvla_lora_local.sh
configs/local/legacy/: diffusion_baseline_local.sh
docs/: AGENT_PROMPTS.md  CV_BULLETS.md  OPERATIONS_GUIDE.md  PROJECT_ABSTRACT.md  PROJECT_ABSTRACT_CN.md  PS_PARAGRAPHS.md
lerobot_policy_phaseqflow/: pyproject.toml
lerobot_policy_phaseqflow/src/lerobot_policy_phaseqflow/: __init__.py  configuration_phaseqflow.py  modeling_phaseqflow.py  processor_phaseqflow.py  processor_steps_phaseq.py
scripts/: benchmark_latency.py  compute_episode_lengths.py  edited_benchmark_latency.py  export_checkpoint.py  inspect_dataset.py  phaseqflow_smoke_matrix.py  run_eval_libero.sh  run_eval_pusht_sanity.sh  smoke_test_phaseqflow_e2e.sh
